Fixed board display issues, added column stacking of board columns on mobile

--- a/join/src/app/board/board.component.scss
+++ b/join/src/app/board/board.component.scss
@@ -39,7 +39,6 @@
   align-items: flex-start;
   gap: 1rem;
   width: 100%;
-  padding: 1rem 0;
 }
 
 .board-column {
@@ -56,29 +55,21 @@
   align-items: center;
   gap: 2rem;
   color: var(--bg-dark-grey);
-    font-size: 1rem;
+  font-size: 1rem;
 }
 
-
 .board-add-task-button {
-color: var(--bg-dark-grey);
+  color: var(--bg-dark-grey);
   background-color: transparent;
   border: solid 1px var(--bg-dark-grey);
   border-radius: 10px;
-  cursor: pointer;
   font-size: 1.2rem;
   display: flex;
   align-items: center;
   gap: 0.5rem;
 
   &:hover {
-    color: var(--bg-blue);
-  }
-
-  img {
-    width: 20px;
-    height: 20px;
-    filter: brightness(0) invert(1);
+    cursor: pointer;
   }
 }
 
